[gd_scene load_steps=15 format=3 uid="uid://c3xu8gmxh077c"]

[ext_resource type="Texture2D" uid="uid://7oj7bsubvyrl" path="res://art/final/app/template_small.png" id="1_nd3ey"]
[ext_resource type="Script" uid="uid://udcnnxycsiji" path="res://scenes/apps/SystemManager/SystemManager.gd" id="1_yk383"]
[ext_resource type="Texture2D" uid="uid://be2htoph6amu1" path="res://art/final/app/minimize_app_icon.png" id="2_wtebx"]
[ext_resource type="Texture2D" uid="uid://dcjhdmanvhm86" path="res://art/final/buttons/red_button.png" id="2_xm2jy"]
[ext_resource type="Texture2D" uid="uid://drvjn1kqhxbui" path="res://art/final/buttons/red_button_pressed.png" id="3_4iqcs"]
[ext_resource type="Texture2D" uid="uid://ce1he10h40nkl" path="res://art/final/app/minimize_app_icon_pressed.png" id="3_4v18k"]
[ext_resource type="Texture2D" uid="uid://cbr8nfkbgvado" path="res://art/final/app/green_button.png" id="4_ar5yb"]
[ext_resource type="Texture2D" uid="uid://cctxd1pse5qln" path="res://art/final/app/close_app_icon.png" id="4_xm2jy"]
[ext_resource type="Texture2D" uid="uid://01j37rf5hvwa" path="res://art/final/app/close_app_icon_pressed.png" id="5_4iqcs"]
[ext_resource type="Texture2D" uid="uid://dj32k226kmian" path="res://art/final/buttons/green_button_pressed.png" id="5_yk383"]
[ext_resource type="FontVariation" uid="uid://dya7lwpc4idw6" path="res://fonts/Arial.tres" id="6_ar5yb"]
[ext_resource type="FontFile" uid="uid://dgpk4lpx2l5ej" path="res://fonts/ARIALI.TTF" id="7_yk383"]
[ext_resource type="FontFile" uid="uid://e685exu6b67d" path="res://fonts/ARIALBI.TTF" id="8_6bjof"]
[ext_resource type="FontFile" uid="uid://cdkc8ambyxovp" path="res://fonts/ARIALBD.TTF" id="9_prnf6"]

[node name="SystemManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yk383")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_nd3ey")

[node name="NextTurnButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 51.0
offset_right = 122.0
offset_bottom = 81.0
scale = Vector2(2, 2)
texture_normal = ExtResource("2_xm2jy")
texture_pressed = ExtResource("3_4iqcs")

[node name="GeneratePowerButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 303.0
offset_top = 49.0
offset_right = 378.0
offset_bottom = 79.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_ar5yb")
texture_pressed = ExtResource("5_yk383")

[node name="GeneratePowerText" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 319.0
offset_top = 69.0
offset_right = 437.0
offset_bottom = 88.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_ar5yb")
theme_override_fonts/italics_font = ExtResource("7_yk383")
theme_override_fonts/bold_italics_font = ExtResource("8_6bjof")
theme_override_fonts/bold_font = ExtResource("9_prnf6")
theme_override_font_sizes/normal_font_size = 16
text = "Generate Power
"
fit_content = true

[node name="PowerGenerated" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 320.0
offset_top = 124.0
offset_right = 438.0
offset_bottom = 143.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_ar5yb")
theme_override_fonts/italics_font = ExtResource("7_yk383")
theme_override_fonts/bold_italics_font = ExtResource("8_6bjof")
theme_override_fonts/bold_font = ExtResource("9_prnf6")
theme_override_font_sizes/normal_font_size = 16
text = "0"
fit_content = true

[node name="NextTurnText" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 88.0
offset_top = 71.0
offset_right = 159.0
offset_bottom = 90.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_ar5yb")
theme_override_fonts/italics_font = ExtResource("7_yk383")
theme_override_fonts/bold_italics_font = ExtResource("8_6bjof")
theme_override_fonts/bold_font = ExtResource("9_prnf6")
theme_override_font_sizes/normal_font_size = 16
text = "Next Turn"
fit_content = true

[node name="TurnNumber" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 88.0
offset_top = 126.0
offset_right = 159.0
offset_bottom = 145.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_ar5yb")
theme_override_fonts/italics_font = ExtResource("7_yk383")
theme_override_fonts/bold_italics_font = ExtResource("8_6bjof")
theme_override_fonts/bold_font = ExtResource("9_prnf6")
theme_override_font_sizes/normal_font_size = 16
text = "0
"
fit_content = true

[node name="TitleBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 30.0
scale = Vector2(0.800001, 0.800001)

[node name="RichTextLabel" type="RichTextLabel" parent="TitleBar"]
texture_filter = 1
layout_mode = 0
offset_left = 35.0
offset_top = 6.25
offset_right = 347.0
offset_bottom = 31.25
theme_override_fonts/normal_font = ExtResource("6_ar5yb")
theme_override_fonts/italics_font = ExtResource("7_yk383")
theme_override_fonts/bold_italics_font = ExtResource("8_6bjof")
theme_override_fonts/bold_font = ExtResource("9_prnf6")
theme_override_font_sizes/normal_font_size = 22
text = "System Manager
"
fit_content = true

[node name="Min" type="TextureButton" parent="TitleBar"]
layout_mode = 0
offset_left = 562.5
offset_top = 6.25
offset_right = 582.5
offset_bottom = 26.25
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("2_wtebx")
texture_pressed = ExtResource("3_4v18k")

[node name="Close" type="TextureButton" parent="TitleBar"]
layout_mode = 0
offset_left = 593.75
offset_top = 6.25
offset_right = 613.75
offset_bottom = 26.25
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("4_xm2jy")
texture_pressed = ExtResource("5_4iqcs")
